--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Actividad T03</h1>
+    <img src="img/code-markup.jpg">
+    <a href="pagina1.html">Página 1</a>
+    <a href="pagina2.html">Página 2</a>
 </body>
 </html>
